# SCDRT

./: .gitmodules  LICENSE  README.md
Interface/: a.out  main.cpp
Interface/Interface/: .gitignore  Interface.pro  plotiing.m  scdtr_interface.cpp  scdtr_interface.h  scdtr_interface.ui
Interface/build-Interface-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: 32.h.3E67387E843624F7.idx  64.h.1B2DCA20315B99F7.idx  QTextCharFormat.22B81402F4F12BAC.idx  QUdpSocket.4A14CEE0DCC4F009.idx  __sigval_t.h.F79D151D5556DCB7.idx  _cassert.h.1D6B61DA01EA5DB9.idx  _exception.h.53FCC34E6F0A10DB.idx  _prefix.h.9008AB579F885526.idx  abi_macros.hpp.20F6B2E999B243F4.idx  add.hpp.EDEAB21B4E3CDC1C.idx  address.hpp.1D32E8D386D5A840.idx  address.hpp.BB2CED91CB0257A7.idx  address.ipp.BF3CBAEBF4EF1504.idx  address_v4.hpp.93F2D39E09C662BA.idx  address_v4.hpp.B4FE660E71CB77F1.idx  address_v4.ipp.830A9E4C03E90A9C.idx  address_v4_iterator.hpp.0C870A81C3139525.idx  address_v4_range.hpp.411B23A2F8BDEEE6.idx  address_v6.hpp.0FEA7367A48369AF.idx  address_v6.hpp.1F21CE277F49FC80.idx  address_v6.ipp.F6D26C475FF7A8F1.idx  (+994 more)
part1/: CMakeLists.txt  Makefile
part1/config/: FreeRTOSConfig.h
part1/include/: ThreadSafeQueue.hpp  can.hpp  command.hpp  controller.hpp  led.hpp  logger.hpp  moving_avg.hpp  pid.hpp  usb.hpp
part1/main/: can.cpp  can.hpp  command.cpp  command.hpp  led.cpp  main.ino  moving_avg.hpp  pid.hpp  usb.cpp  usb.hpp
part1/scripts/: data.csv  data_cpy  read_python.py  write_python.py
part1/src/: can.cpp  command.cpp  controller.cpp  led.cpp  main.cpp  moving_avg.cpp  pid.cpp  usb.cpp
